// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwipeAction left only 1`] = `
<div
  class="mcore-swipe-action"
>
  <div
    class="mcore-swipe-action__actions mcore-swipe-action__actions--left"
  >
    <button
      aria-disabled="false"
      class="mcore-button mcore-button--primary mcore-button--md mcore-button--radius"
      type="button"
    >
      <span>
        左按钮1
      </span>
    </button>
    <button
      aria-disabled="false"
      class="mcore-button mcore-button--danger mcore-button--md mcore-button--radius"
      type="button"
    >
      <span>
        左按钮2
      </span>
    </button>
  </div>
  <div
    class="mcore-swipe-action__content"
    style="-webkit-transition-duration:undefinedms;transition-duration:undefinedms;-webkit-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0)"
  >
    <div>
      右滑
    </div>
  </div>
</div>
`;

exports[`SwipeAction renders correctly 1`] = `
<SwipeAction
  animationDuration={300}
  left={
    Array [
      <Button
        block={false}
        disabled={false}
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[MockFunction]}
        prefixCls="mcore-button"
        shadow={false}
        shape="radius"
        size="md"
        theme="primary"
      >
        左按钮1
      </Button>,
      <Button
        block={false}
        disabled={false}
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[MockFunction]}
        prefixCls="mcore-button"
        shadow={false}
        shape="radius"
        size="md"
        theme="danger"
      >
        左按钮2
      </Button>,
    ]
  }
  moveDistanceRatio={0.5}
  moveTimeSpan={300}
  offset={10}
  prefixCls="mcore-swipe-action"
  right={
    Array [
      <Button
        block={false}
        disabled={false}
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[MockFunction]}
        prefixCls="mcore-button"
        shadow={false}
        shape="radius"
        size="md"
        theme="primary"
      >
        右按钮1
      </Button>,
      <Button
        block={false}
        disabled={false}
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[MockFunction]}
        prefixCls="mcore-button"
        shadow={false}
        shape="radius"
        size="md"
        theme="danger"
      >
        右按钮2
      </Button>,
    ]
  }
>
  <div
    className="mcore-swipe-action"
  >
    <div
      className="mcore-swipe-action__actions mcore-swipe-action__actions--left"
    >
      <Button
        block={false}
        disabled={false}
        ghost={false}
        htmlType="button"
        key="0"
        loading={false}
        onClick={[Function]}
        prefixCls="mcore-button"
        shadow={false}
        shape="radius"
        size="md"
        theme="primary"
      >
        <button
          aria-disabled={false}
          className="mcore-button mcore-button--primary mcore-button--md mcore-button--radius"
          onClick={[Function]}
          type="button"
        >
          <span>
            左按钮1
          </span>
        </button>
      </Button>
      <Button
        block={false}
        disabled={false}
        ghost={false}
        htmlType="button"
        key="1"
        loading={false}
        onClick={[Function]}
        prefixCls="mcore-button"
        shadow={false}
        shape="radius"
        size="md"
        theme="danger"
      >
        <button
          aria-disabled={false}
          className="mcore-button mcore-button--danger mcore-button--md mcore-button--radius"
          onClick={[Function]}
          type="button"
        >
          <span>
            左按钮2
          </span>
        </button>
      </Button>
    </div>
    <div
      className="mcore-swipe-action__actions mcore-swipe-action__actions--right"
    >
      <Button
        block={false}
        disabled={false}
        ghost={false}
        htmlType="button"
        key="0"
        loading={false}
        onClick={[Function]}
        prefixCls="mcore-button"
        shadow={false}
        shape="radius"
        size="md"
        theme="primary"
      >
        <button
          aria-disabled={false}
          className="mcore-button mcore-button--primary mcore-button--md mcore-button--radius"
          onClick={[Function]}
          type="button"
        >
          <span>
            右按钮1
          </span>
        </button>
      </Button>
      <Button
        block={false}
        disabled={false}
        ghost={false}
        htmlType="button"
        key="1"
        loading={false}
        onClick={[Function]}
        prefixCls="mcore-button"
        shadow={false}
        shape="radius"
        size="md"
        theme="danger"
      >
        <button
          aria-disabled={false}
          className="mcore-button mcore-button--danger mcore-button--md mcore-button--radius"
          onClick={[Function]}
          type="button"
        >
          <span>
            右按钮2
          </span>
        </button>
      </Button>
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        className="mcore-swipe-action__content"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "WebkitTransform": "translate3d(0px, 0, 0)",
            "WebkitTransitionDuration": "undefinedms",
            "transform": "translate3d(0px, 0, 0)",
            "transitionDuration": "undefinedms",
          }
        }
      >
        <div>
          左右都能滑动
        </div>
      </div>
    </Drag>
  </div>
</SwipeAction>
`;

exports[`SwipeAction right only 1`] = `
<div
  class="mcore-swipe-action"
>
  <div
    class="mcore-swipe-action__actions mcore-swipe-action__actions--right"
  >
    <button
      aria-disabled="false"
      class="mcore-button mcore-button--primary mcore-button--md mcore-button--radius"
      type="button"
    >
      <span>
        右按钮1
      </span>
    </button>
    <button
      aria-disabled="false"
      class="mcore-button mcore-button--danger mcore-button--md mcore-button--radius"
      type="button"
    >
      <span>
        右按钮2
      </span>
    </button>
  </div>
  <div
    class="mcore-swipe-action__content"
    style="-webkit-transition-duration:undefinedms;transition-duration:undefinedms;-webkit-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0)"
  >
    <div>
      左滑
    </div>
  </div>
</div>
`;
